fix alignment in nav

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -41,8 +41,12 @@
   	}
 }
 
+.bk-header {
+	padding: 25px 30px 20px;
+}
+
 .bk-header, .main-zone, .bk-footer {
-	padding: 35px 30px 30px;
+    padding: 35px 30px 30px;
 }
 
 .bk-footer {
@@ -66,6 +70,8 @@
 }
 
 .brand {
+    margin-top: 10px;
+    margin-bottom: 10px;
 	.widget.logo, .widget.companyname {
 		display: inline-block;
 		vertical-align: middle;
@@ -156,6 +162,9 @@
 // -----------------------------
 
 .widget.extendednavigation {
+    .clearfix;
+    margin-top: 10px;
+    margin-bottom: 10px;
 	@media only screen and (min-width: 768px) {
 		margin-left: -20px;
 		margin-right: -20px;
